# nrf52-hal-example

./: .gitignore  Cargo.toml  README.md  blackmagic.gdb  build.rs  jlink.gdb  jlink.sh  memory.x  notes.md  softdevice.sh  wrapper.h
.cargo/: config
examples/: blinky.rs  hello.rs  hello_softdevice.rs
libc/: timeconst.c  timeconst.h
libc/softdevice/: nrf.h  nrf_svc.h
src/: lib.rs
